@@ -56,7 +56,7 @@ import static co.elastic.apm.agent.servlet.RequestDispatcherSpanType.INCLUDE;
 import static co.elastic.apm.agent.servlet.ServletApiAdvice.SPAN_SUBTYPE;
 import static co.elastic.apm.agent.servlet.ServletApiAdvice.SPAN_TYPE;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.when;
 
 class ServletInstrumentationTest extends AbstractServletTest {
 
@@ -131,24 +131,24 @@ class ServletInstrumentationTest extends AbstractServletTest {
 
     @Test
     void testForward_DispatchSpansDisabled() throws Exception {
-        doReturn(Collections.singletonList(ServletInstrumentation.SERVLET_API_DISPATCH))
-            .when(getConfig().getConfig(CoreConfiguration.class)).getDisabledInstrumentations();
+        when(getConfig().getConfig(CoreConfiguration.class).getDisabledInstrumentations())
+            .thenReturn(Collections.singletonList(ServletInstrumentation.SERVLET_API_DISPATCH));
         callServlet(1, "/forward");
         assertThat(reporter.getSpans()).isEmpty();
     }
 
     @Test
     void testInclude_DispatchSpansDisabled() throws Exception {
-        doReturn(Collections.singletonList(ServletInstrumentation.SERVLET_API_DISPATCH))
-            .when(getConfig().getConfig(CoreConfiguration.class)).getDisabledInstrumentations();
+        when(getConfig().getConfig(CoreConfiguration.class).getDisabledInstrumentations())
+            .thenReturn(Collections.singletonList(ServletInstrumentation.SERVLET_API_DISPATCH));
         callServlet(1, "/include");
         assertThat(reporter.getSpans()).isEmpty();
     }
 
     @Test
     void testClientError_DispatchSpansDisabled() throws Exception {
-        doReturn(Collections.singletonList(ServletInstrumentation.SERVLET_API_DISPATCH))
-            .when(getConfig().getConfig(CoreConfiguration.class)).getDisabledInstrumentations();
+        when(getConfig().getConfig(CoreConfiguration.class).getDisabledInstrumentations())
+            .thenReturn(Collections.singletonList(ServletInstrumentation.SERVLET_API_DISPATCH));
         callServlet(1, "/unknown", "Hello Error!", 404);
         assertThat(reporter.getSpans()).isEmpty();
         assertThat(reporter.getErrors().size()).isEqualTo(1);
