@@ -40,6 +40,8 @@ endif::[]
 * Add support for sampling weight with propagation in `tracestate` W3C header {pull}1384[#1384]
 * Adding two more valid options to the `log_level` config: `WARNING` (equivalent to `WARN`) and `CRITICAL`
   (will be treated as `ERROR`) - {pull}1431[1431]
+* Add the ability to disable Servlet-related spans for `INCLUDE`, `FORWARD` and `ERROR` dispatches (without affecting
+  basic Servlet capturing) by adding `servlet-api-dispatch` to <<config-disable-instrumentations>> - {pull}1448[1448]
 
 [float]
 ===== Bug fixes
